@@ -34,7 +34,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>24</maven.compiler.release>
+		<maven.compiler.release>25</maven.compiler.release>
 
 		<gson.version>2.12.1</gson.version>
 
@@ -94,9 +94,6 @@
 						<additionalJOption>-J-Duser.language=en</additionalJOption>
 						<additionalJOption>-J-Duser.country=US</additionalJOption>
 					</additionalJOptions>
-					<additionalOptions>
-						<additionalOption>--enable-preview</additionalOption>
-					</additionalOptions>
 					<release>${maven.compiler.release}</release>
 				</configuration>
 			</plugin>
@@ -105,7 +102,6 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>${maven.compiler.release}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 				<executions>
 					<execution>
@@ -155,7 +151,6 @@
 					<argLine>
 						@{surefire.jacoco.args}
 						-javaagent:${net.bytebuddy:byte-buddy-agent:jar}
-						--enable-preview
 					</argLine>
 				</configuration>
 			</plugin>
